# nexus

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  schema.sql
backend/ai/: orchestrator.py
backend/ai/agents/: base.py  sales.py  support.py
backend/ai/llm/: streaming.py
backend/app/: dependencies.py  main.py
backend/app/middleware/: auth.py
backend/bot/: config.py  main.py
backend/bot/handlers/: admin.py  business.py  inline.py  payments.py  start.py
backend/bot/middleware/: logging.py  rate_limit.py  tenant.py
backend/bot/services/: business_connection.py  crm.py
backend/bot/utils/: crypto.py  formatters.py
backend/db/: engine.py
backend/db/migrations/: env.py
backend/db/models/: __init__.py  automation.py  base.py  business.py  conversation.py  gamification.py  knowledge.py  order.py  payment.py  product.py  referral.py  tenant.py  user.py  wallet.py
backend/realtime/: celery_app.py
backend/tasks/: ai_tasks.py  analytics_tasks.py  notification_tasks.py  payment_tasks.py
backend/tests/: test_basic.py
infra/docker/: docker-compose.yml
miniapp/: .eslintrc.json  Dockerfile  index.html  package.json  tailwind.config.ts
miniapp/src/: App.tsx  index.css  main.tsx
miniapp/src/hooks/: useBackButton.ts  useBiometric.ts  useCloudStorage.ts  useHaptic.ts  useInitData.ts  useMainButton.ts  useTheme.ts  useWebSocket.ts
miniapp/src/lib/: api.ts  utils.ts
miniapp/src/pages/: Cart.tsx  Dashboard.tsx  Leaderboard.tsx  Onboarding.tsx  Orders.tsx  ProductDetail.tsx  Products.tsx  Profile.tsx  Referrals.tsx  Settings.tsx  Wallet.tsx
miniapp/src/providers/: AuthProvider.tsx  TWAProvider.tsx  ThemeProvider.tsx  WebSocketProvider.tsx
miniapp/src/stores/: authStore.ts  (+2 more)
(+18 files in other folders)
