[project]
name = "nexus"
version = "0.1.0"
description = "Nexus — Production-grade Telegram platform"
requires-python = ">=3.11"
dependencies = [
    # Bot
    "aiogram>=3.10,<4",
    # Web
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "websockets>=13",
    # DB
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pgvector>=0.3",
    # Cache / Queue
    "redis[hiredis]>=5.0",
    "celery[redis]>=5.4",
    "aio-pika>=9.4",
    # AI
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "openai>=1.40",
    "tiktoken>=0.7",
    # Auth / Crypto
    "pyjwt>=2.9",
    "cryptography>=43",
    # HTTP
    "httpx>=0.27",
    "aiohttp>=3.10",
    # Utils
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "orjson>=3.10",
    "structlog>=24.1",
    "tenacity>=8.5",
    # S3
    "minio>=7.2",
    # TON
    "tonutils>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
    "pre-commit>=3.8",
]

[tool.setuptools.packages.find]
where = ["backend"]
include = ["bot*", "app*", "ai*", "db*", "payments*", "realtime*", "tasks*", "blockchain*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "C4", "SIM", "TCH"]
ignore = ["E501", "B008", "SIM105", "TC002"]

[tool.ruff.lint.isort]
known-first-party = ["nexus"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
